--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
-title: Octocat's homepage
-description: Bookmark this to keep an eye on my project updates!
+title: Warframe Fissure Tracker
+description: WIP - Updates once per minute
